# corehr-pdf-split

./: .gitignore  README.md  main.py  pyproject.toml
